<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lightPrimary"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    tools:context=".ChooseActivity">


    <TextView
        android:id="@+id/choose_app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_one"
        android:gravity="center"
        android:text="@string/app_logo"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:transitionName="splash_logo_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/choose_app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:transitionName="splash_slogan_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_app_logo"
        tools:ignore="TextContrastCheck" />


    <ImageView
        android:id="@+id/choose_app_mascot"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:src="@drawable/ic_mascot"
        app:layout_constraintEnd_toEndOf="@id/choose_app_logo"
        app:layout_constraintStart_toStartOf="@id/choose_app_logo"
        app:layout_constraintTop_toBottomOf="@id/choose_app_slogan">

    </ImageView>


    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/choose_sign_up_mrl"
        style="@style/RippleStyleGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/choose_app_logo"
        app:layout_constraintStart_toStartOf="@id/choose_app_logo"
        app:layout_constraintTop_toBottomOf="@id/choose_app_mascot">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_button_background"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </com.balysv.materialripple.MaterialRippleLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/choose_sign_in_mrl"
        style="@style/RippleStyleGrey2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/choose_sign_up_mrl"
        app:layout_constraintStart_toStartOf="@id/choose_sign_up_mrl"
        app:layout_constraintTop_toBottomOf="@id/choose_sign_up_mrl">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:padding="15dp"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary1"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </com.balysv.materialripple.MaterialRippleLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/choose_skip_mrl"
        style="@style/RippleStyleGrey2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/choose_sign_in_mrl"
        app:layout_constraintStart_toStartOf="@id/choose_sign_in_mrl"
        app:layout_constraintTop_toBottomOf="@id/choose_sign_in_mrl">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="15dp"
            android:text="@string/skip"
            android:textColor="@color/colorPrimary2"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </com.balysv.materialripple.MaterialRippleLayout>


</androidx.constraintlayout.widget.ConstraintLayout>