<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/transparent"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/fredoka_one"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/transparent"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary1"
            android:elevation="100dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/vocabulary_fc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/vocabulary"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/grammaticalCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/grammatical_category"
                    android:textSize="15sp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/definition"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/title_collocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/exemplary_collocations" />

                <TextView
                    android:id="@+id/collocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/collocations" />

                <TextView
                    android:id="@+id/topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/topic" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="8dp"
            app:cnb_menuResource="@menu/bottom_menu_fake"
            app:cnb_unselectedColor="@color/transparent">

        </com.ismaeldivita.chipnavigation.ChipNavigationBar>


    </LinearLayout>

    <View
        android:id="@+id/swipe_left_indicator"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:alpha="0"
        android:background="@color/white" />

    <View
        android:id="@+id/swipe_right_indicator"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:alpha="0"
        android:background="@color/white" />

</RelativeLayout>