<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ForgotPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/lightPrimary">

        <ImageView
            android:id="@+id/forgot_password_close_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_effect_transparent_btn"
            android:clickable="true"
            android:contentDescription="@string/close_btn"
            android:focusable="true"
            android:minWidth="24dp"
            android:minHeight="24dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp">

            <ImageView
                android:id="@+id/forgot_password_mascot_iv"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/mascot"
                android:src="@drawable/ic_mascot"
                android:transitionName="mascot_splash_screen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forgot_password_forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/have_you_lost"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="app_slogan"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_mascot_iv"
                app:layout_constraintStart_toStartOf="@id/forgot_password_mascot_iv"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_mascot_iv" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_password_username_or_email_tf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/username_or_email"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_forgot_password_tv"
                app:layout_constraintStart_toStartOf="@id/forgot_password_forgot_password_tv"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_forgot_password_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_password_username_or_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textEmailAddress"
                    android:maxLines="1"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_password_send_email_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ripple_effect_basic_btn"
                android:elevation="0dp"
                android:padding="10dp"
                android:text="@string/send_email"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_username_or_email_tf"
                app:layout_constraintStart_toStartOf="@id/forgot_password_username_or_email_tf"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_username_or_email_tf"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>