<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightPrimary"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/add_new_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="start"
        android:text="Learn"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_vocabulary_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/vocabulary"
        app:layout_constraintStart_toStartOf="@id/add_new_tv"
        app:layout_constraintTop_toBottomOf="@id/add_new_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_vocabulary_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_definition_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/definition"
        app:layout_constraintEnd_toEndOf="@+id/add_new_vocabulary_tf"
        app:layout_constraintStart_toStartOf="@id/add_new_vocabulary_tf"
        app:layout_constraintTop_toBottomOf="@+id/add_new_vocabulary_tf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_definition_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_grammCat_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/grammatical_category"
        app:layout_constraintEnd_toEndOf="@id/add_new_definition_tf"
        app:layout_constraintStart_toStartOf="@id/add_new_definition_tf"
        app:layout_constraintTop_toBottomOf="@id/add_new_definition_tf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_collocations_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_collocations_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/collocations"
        app:layout_constraintEnd_toEndOf="@id/add_new_grammCat_tf"
        app:layout_constraintStart_toStartOf="@id/add_new_grammCat_tf"
        app:layout_constraintTop_toBottomOf="@id/add_new_grammCat_tf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_new_topic_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_topic_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/topic"
        app:layout_constraintEnd_toEndOf="@id/add_new_collocations_tf"
        app:layout_constraintStart_toStartOf="@id/add_new_collocations_tf"
        app:layout_constraintTop_toBottomOf="@id/add_new_collocations_tf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button_background"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_sign_up_mtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/basic_button_background"
        android:elevation="0dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:theme="@style/FormButton"
        app:layout_constraintEnd_toEndOf="@id/add_new_topic_tf"
        app:layout_constraintStart_toStartOf="@id/add_new_topic_tf"
        app:layout_constraintTop_toBottomOf="@id/add_new_topic_tf"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>

